--- a/requirements.txt
+++ b/requirements.txt
@@ -89,7 +89,9 @@ referencing==0.35.1
 requests==2.32.2
 rpds-py==0.18.1
 scikit-learn==1.5.0
+scikit-posthocs==0.9.0
 scipy==1.13.1
+seaborn==0.13.2
 shap==0.45.1
 six==1.16.0
 slicer==0.0.8
